# Playlistify

./: .gitignore  CHANGELOG.md  DEVELOPER_UI_GUIDE.md  README.md  UI_IMPROVEMENTS_SUMMARY.md  playlist_downloader.py  pyproject.toml  test_dependencies.py  test_quality_fallback.py  test_ui_transitions.py
playlistfy-v1/: playlistfy.py
src/playlistfy/: __init__.py  __main__.py  cli.py
src/playlistfy/config/: __init__.py  settings.py
src/playlistfy/core/: downloader.py  playlist.py
src/playlistfy/services/: dependencies.py
src/playlistfy/ui/: components.py  interactive.py  live_display.py  progress.py  theme.py
src/playlistfy/utils/: errors.py  retry.py  validators.py
