[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playlistfy"
version = "2.0.0"
authors = [
    { name="Patrick Paul", email="patrickpaul367@gmail.com" },
]
description = "A beautiful CLI tool for downloading YouTube videos and playlists"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "colorama",
    "tqdm",
    "yt-dlp",
    "rich>=13.0.0",
]

[project.scripts]
playlistfy = "playlistfy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]